After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697801 - Alt+Tab doesn't work in Metacity with gsettings-desktop-schemas 3.8
Alt+Tab doesn't work in Metacity with gsettings-desktop-schemas 3.8
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
trunk
Other Linux
: Normal normal
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2013-04-11 14:44 UTC by Dmitry Shachnev
Modified: 2013-05-30 17:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add support for switch-applications keybindings (2.11 KB, patch)
2013-04-11 14:46 UTC, Dmitry Shachnev
committed Details | Review
Also add META_KEYBINDING_ACTIONs for switching applications (2.18 KB, patch)
2013-05-27 16:25 UTC, Dmitry Shachnev
committed Details | Review

Description Dmitry Shachnev 2013-04-11 14:44:18 UTC
In gsettings-desktop-schemas 3.8, Alt+Tab matches switch-applications keybinding, not switch-apps. I am attaching a simple patch that respects the new key name.
Comment 1 Dmitry Shachnev 2013-04-11 14:46:57 UTC
Created attachment 241257 [details] [review]
Add support for switch-applications keybindings

In gsettings-desktop-schemas 3.8, there is not shortcut for
switch-windows, and Alt+Tab points to switch-applications by
default.

As we do not support switching applications, but want Alt+Tab to
work, just bind switch-applications to the same action as
switch-windows is currently bound to (and the same for -backward).
Comment 2 Dmitry Shachnev 2013-05-27 14:24:58 UTC
Florian: any chance you can look at the patch?
Comment 3 Florian Müllner 2013-05-27 15:13:25 UTC
Using "switch-windows" to switch between windows is obviously more correct than "switch-applications" (which is just unsupported in metacity), but

  (1) metacity is unmaintained, so I don't really care :-)
  (2) we have almost the same patch in mutter[0]

So if it wasn't for (1), I'd recommend adapting the patch from (2) ...

[0] https://git.gnome.org/browse/mutter/commit?id=2282326f
Comment 4 Dmitry Shachnev 2013-05-27 15:55:22 UTC
> (1) metacity is unmaintained, so I don't really care :-)

I saw you did some manpage update, so I thougt there is some chance to get my patch in :)

(I personally use Metacity because it's fast, and in Debian/Ubuntu we are going to provide Metacity packages for users with non-3d-capable hardware).

> I'd recommend adapting the patch from (2)

What do you mean by "adapting"? Swapping two lines so that the diffs are identical?
Comment 5 Florian Müllner 2013-05-27 16:03:54 UTC
I was referring to the additions of META_KEYBINDING_ACTION_SWITCH_APPLICATIONS and META_KEYBINDING_ACTION_SWITCH_APPLICATIONS_BACKWARD, but feel free to just push ...
Comment 6 Dmitry Shachnev 2013-05-27 16:25:54 UTC
Created attachment 245398 [details] [review]
Also add META_KEYBINDING_ACTIONs for switching applications

OK, added, though I don't see when it can be used (I guess there's some magic macro that binds one defines to another, but I didn't find it).

I don't have commit rights, so I can't push it.
Comment 7 Jeremy Bicha 2013-05-30 17:09:53 UTC
Attachment 241257 [details] pushed as 67165f5 - Add support for switch-applications keybindings
Attachment 245398 [details] pushed as da8aba7 - Also add META_KEYBINDING_ACTIONs for switching applications