Add support for switch-applications keybindings

In gsettings-desktop-schemas 3.8, there is not shortcut for
switch-windows, and Alt+Tab points to switch-applications by
default.

As we do not support switching applications, but want Alt+Tab to
work, just bind switch-applications to the same action as
switch-windows is currently bound to (and the same for -backward).

https://bugzilla.gnome.org/show_bug.cgi?id=697801